force-app/main/default/objects/DEL_KnowledgeConfiguration__c/DEL_KnowledgeConfiguration__c.object-meta.xml
<CustomObject>
    <description>DEL- This custom object is for storing Data Category</description>
    <label>Knowledge Configuration</label>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Knowledge Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>