force-app/main/default/objects/DEL_KnowledgeConfiguration__c/fields/KnowledgeArticleId__c.field-meta.xml
<CustomField>
    <fullName>KnowledgeArticleId__c</fullName>
    <description>Id of the Knowledge Article for a Knowledge Version</description>
    <label>Knowledge Article Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>