force-app/main/default/objects/DEL_KnowledgeConfiguration__c/fields/PageName__c.field-meta.xml
<CustomField>
    <fullName>PageName__c</fullName>
    <label>Page Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>