force-app/main/default/objects/DEL_KnowledgeConfiguration__c/fields/ParentCategory__c.field-meta.xml
<CustomField>
    <fullName>ParentCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DEL-Lookup on Knowledge configuration</description>
    <label>Parent Category</label>
    <referenceTo>DEL_KnowledgeConfiguration__c</referenceTo>
    <relationshipLabel>Knowledge Configurations</relationshipLabel>
    <relationshipName>Knowledge_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>