force-app/main/default/objects/DEL_KnowledgeConfiguration__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This field helps to identify if the configuration is for Data Category or Knowledge Article.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Category</fullName>
            </value>
            <value>
                <fullName>Knowledge Article</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>