force-app/main/default/objects/DEL_KnowledgeConfiguration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SortOrder__c</columns>
    <columns>ParentCategory__c</columns>
    <columns>PageName__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>